--- a/css/desktop.css
+++ b/css/desktop.css
@@ -8,3 +8,47 @@ html {
     font-size: 62.5%;
     font-family: 'Spartan', sans-serif;
 }
+
+:root {
+    --very-dark-magenta: hsl(300, 43%, 22%);
+    --soft-pink: hsl(333, 80%, 67%);
+    --dark-grayish-magenta: hsl(303, 10%, 53%);
+    --light-grayish-Magenta: hsl(300, 24%, 96%);
+    --white: hsl(0, 0%, 100%);
+}
+
+main .first-section .text-container h1 {
+    font-size: 3.5rem;
+    font-weight: 700;
+    letter-spacing: -.2rem;
+    text-align: center;
+    line-height: 4rem;
+    color: var(--very-dark-magenta);
+}
+
+main .first-section .text-container p {
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-align: center;
+    line-height: 2.5rem;
+    color: var(--dark-grayish-magenta);
+}
+
+.principal-title {
+    margin: 3rem 4rem;
+}
+
+.principal-description {
+    margin: 3rem 1.8rem;
+}
+
+.text-container {
+    padding-top: 8rem;
+}
+
+.first-section {
+    background: url("../images/bg-pattern-top-mobile.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
