--- a/css/desktop.css
+++ b/css/desktop.css
@@ -13,33 +13,36 @@ html {
     --very-dark-magenta: hsl(300, 43%, 22%);
     --soft-pink: hsl(333, 80%, 67%);
     --dark-grayish-magenta: hsl(303, 10%, 53%);
-    --light-grayish-Magenta: hsl(300, 24%, 96%);
-    --white: hsl(0, 0%, 100%);
+    --light-grayish-magenta: hsl(300, 24%, 96%);
+}
+
+main {
+    background: url("../images/bg-pattern-bottom-desktop.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
 }
 
 main .first-section .text-container h1 {
-    font-size: 3.5rem;
+    font-size: 5rem;
     font-weight: 700;
     letter-spacing: -.2rem;
-    text-align: center;
     line-height: 4rem;
     color: var(--very-dark-magenta);
 }
 
 main .first-section .text-container p {
+    letter-spacing: -.5px;
     font-size: 1.5rem;
     font-weight: 500;
-    text-align: center;
     line-height: 2.5rem;
     color: var(--dark-grayish-magenta);
 }
 
-.principal-title {
-    margin: 3rem 4rem;
-}
-
 .principal-description {
-    margin: 3rem 1.8rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 .text-container {
@@ -47,8 +50,81 @@ main .first-section .text-container p {
 }
 
 .first-section {
-    background: url("../images/bg-pattern-top-mobile.svg");
+    background: url("../images/bg-pattern-top-desktop.svg");
     background-size: contain;
     background-repeat: no-repeat;
+    padding: 7rem 20rem;
+    display: grid;
+    grid-template-columns: 1fr 70%;
 }
 
+.rating-boxes {
+    display: grid;
+    justify-content: center;
+}
+
+.star-box {
+    background-color: var(--light-grayish-magenta);
+    margin: 1rem 0;
+    border-radius: .5rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 3rem;
+    padding-right: 15rem;
+}
+
+.stars {
+    letter-spacing: .5rem;
+}
+
+.title-rated {
+    margin-left: 4rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--very-dark-magenta);
+}
+
+.second-section {
+    padding: 6rem 2.5rem;
+    color: var(--light-grayish-magenta);
+    display: grid;
+    grid-row-gap: 2rem;
+}
+
+.box-testimonial {
+    background-color: var(--very-dark-magenta);
+    padding: 3rem;
+    border-radius: .5rem;
+}
+
+.person {
+    display: grid;
+    grid-template-columns: 6rem 1fr;
+    align-items: center;
+}
+
+.profile-pic {
+    border-radius: 50%;
+    width: 4rem;
+}
+
+.verified-name {
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+h3 {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--soft-pink);
+}
+
+.testimonial {
+    margin-top: 2rem;
+    font-size: 1.3rem;
+    line-height: 2.1rem;
+}
