--- a/css/desktop.css
+++ b/css/desktop.css
@@ -23,6 +23,7 @@ main {
 }
 
 main .first-section .text-container h1 {
+    margin-right: 2 rem;
     font-size: 5rem;
     font-weight: 700;
     letter-spacing: -.2rem;
@@ -52,12 +53,12 @@ main .first-section .text-container p {
     padding-left: 15vw;
     padding-right: 15vw;
     display: grid;
-    grid-template-columns: 1fr 70%;
+    grid-template-columns: 1fr 60%;
 }
 
 .rating-boxes {
     display: block;
-    margin-left: 35%;
+    margin-left: 30%;
 }
 
 .star-box {
@@ -115,6 +116,17 @@ main .first-section .text-container p {
     display: grid;
     grid-template-columns: 6rem 1fr;
     align-items: center;
+}
+
+.box-testimonial.irene {
+    margin-top: 2rem;
+    margin-bottom: -2rem;
+}
+
+.box-testimonial.anne {
+    margin-top: 4rem;
+    margin-bottom: -4rem;
+    
 }
 
 .profile-pic {
